--- a/02-GIScience.qmd
+++ b/02-GIScience.qmd
@@ -16,7 +16,7 @@ The slides for this week's lecture can be downloaded here: [\[Link\]]({{< var sl
 - Yuan, M. 2001. Representing complex geographic phenomena in GIS. *Cartography and Geographic Information Science* 28(2): 83-96. [[Link]](https://doi.org/10.1559/152304001782173718)
 
 ## Simple digitisation of spatial features
-To get spatial features in a digital form, they need to be digitised. Let’s take what should be a straight-forward example of digitising the river Thames in London.
+To get spatial features in a digital form, they need to be digitised. Let’s take a quick look in this first part of the practical at a straight-forward example of digitising the river Thames in London.
 
 ```{r}
 #| label: fig-digitise
@@ -26,7 +26,7 @@ To get spatial features in a digital form, they need to be digitised. Let’s ta
 knitr::include_graphics('images/w02/river-thames.png')
 ```
 
-We are going to use a very simple online tool that allows us to create digital data and export the data we create as raw files.
+We are going to use a very simple online tool that allows us to create digital data and export the data we create as raw files:
 
 1. Head to [geojson.io](http://geojson.io/#map=12/51.5170/-0.1030).
 2. In the bottom left-hand corner, select *Satellite Streets* as your map option.
@@ -37,7 +37,7 @@ We are going to use a very simple online tool that allows us to create digital d
 7. You can export your data using the *Save* menu.
 
 ## Population change in London
-The second part of this practical will introduces you to **attribute joins** followed by creating a [choropleth map](https://en.wikipedia.org/wiki/Choropleth_map). You will be using different types of *joins* throughout this module, and probably the rest of your career, so it is incredibly important that you understand how they work.
+The second part of this practical will introduces you to **attribute joins** followed by creating a [choropleth map](https://en.wikipedia.org/wiki/Choropleth_map). You will be using different types of *joins* throughout this practical, this module in general, and probably the rest of your career, so it is incredibly important that you understand how these work.
 
 ::: { .callout-warning}
 The datasets you will create in this practical will be used in next week's practical, so make sure to follow every step and save your data carefully.
@@ -79,10 +79,10 @@ Very often in GIS-related courses you will be given pre-processed datasets. Beca
 ### Setting the scene {#w02-scene}
 In this part of the practical, we will investigate how the population in London has changed over time. Understanding population change - over time and space - is spatial analysis at its most fundamental. We can understand a lot just from where population is growing or decreasing, including thinking through the impacts of these changes on the provision of housing, education, health and transport infrastructure. 
 
-We can also see first-hand the impact of wider socio-economic processes, such as urbanisation. Today we will look at population in London in the Census years of 2011 and 2021 at the **Lower Super Output Area** scale that we can use within our future analysis projects, starting next week. 
+Today we will look at population in London in the Census years of 2011 and 2021 at the **Lower Super Output Area** scale that we can also use within our future analysis projects. 
 
 ::: { .callout-note}
-We will use the population dataset to *normalise* other datasets. Why? When we record events created by humans, there is often a population bias: simply, more people in an area will by probability lead to a higher occurrence of said event, such as crime. We will look at this in greater detail next week.
+We will use the population dataset we create today to *normalise* other datasets in the module. Why? When we record events created by humans, there is often a population bias: simply, more people in an area will by probability lead to a higher occurrence of said event, such as crime. We will look at this in greater detail next week.
 :::
 
 ### Finding data {#w02-finding}
@@ -92,7 +92,7 @@ In the UK, finding authoritative data on population and *Administrative Geograph
 [Data.gov.uk](https://www.data.gov.uk) is the UK government’s central database that contains open data that the central government, local authorities and public bodies publish. This includes, for example, aggregated census and health data – and even government spending. In addition to this central database, there are other authoritative databases run by the government and/or respective public bodies that contain either a specific type of data (e.g. census data, crime data) or a specific collection of datasets (e.g. health data from the NHS, data about London). Some portals are less up-to-date than others, so it is wise to double-check with the ‘originators’ of the data to see if there are more recent versions.
 ::: 
 
-For our practical, we will access data from two portals:
+For our practical, we will access data from two authoritative data portals:
 
 - For our administrative boundaries, we will download the **spatial** data from the *Open Geography Portal*. 
 - For our population data, we will download **attribute** data directly from the *Office of National Statistics (ONS)*.
@@ -123,7 +123,7 @@ Administrative geographies are a way of dividing the country into smaller sub-di
 Now open your `GEOG0030/data/raw/` folder and create a new folder called `boundaries`. Rename the two files you just downloaded to `LSOA2011.gpkg` and `LSOA2021.gpkg`, respectively, and copy these into your `boundaries` folder.
 
 ::: { .callout-note}
-You may have used spatial data before and noticed that we did not download a collection of files knowns as a `shapefile` but a `geopackage` instead. Whilst `shapefiles` are still being used, and you will most likely come across them at some point in    your career, the more modern, more portable, and open-source `geopackage` should be your spatial data format of choice where possible. Have a look at this article on towardsdatascience.com for an excellent explanation on why one should use `geopackage` files instead of `shapefiles`: [[Link]](https://towardsdatascience.com/why-you-need-to-use-geopackage-files-instead-of-shapefile-or-geojson-7cb24fe56416)
+You may have used spatial data before and noticed that we did not download a collection of files known as a `shapefile` but a `geopackage` instead. Whilst `shapefiles` are still being used, and you will most likely come across them at some point in    your career, the more modern, more portable, and open-source `geopackage` should be your spatial data format of choice where possible. Have a look at this article on *towardsdatascience.com* for an excellent explanation on why one should use `geopackage` files instead of `shapefiles`: [[Link]](https://towardsdatascience.com/why-you-need-to-use-geopackage-files-instead-of-shapefile-or-geojson-7cb24fe56416)
 :::
 
 ### Downloading population data {#w02-download-population}
@@ -151,8 +151,71 @@ To get the 2011 Census population counts, you should:
 In your `GEOG0030/data/raw/` folder, now create a new folder called `population` and copy the two spreadsheets to the newly created `population` folder. Rename the files you downloaded to: `LSOA2011_population.xlsx` and `LSOA2021_population.xlsx`, respectively.
 
 ### Cleaning data {#w02-cleaning}
-When you open up any of the LSOA spreadsheets in Excel, you will notice that some additional information is contained at the top of each of the files. This extra information will confuse QGIS and we therefore need to do a bit of data cleaning. We will also save the data in `csv` format.
+When you open up any of the LSOA spreadsheets in Excel, you will notice that some additional rows of information are contained at the top of each of these files. This extra information will confuse QGIS and we therefore need to do a bit of data cleaning. To reduce the chance of errors in later stages, we will also save the data in `csv` format.
 
 ::: {.callout-tip}
 `csv` stands for comma (or character) separated values. A `csv` file can be thought of as stripped-down Excel spreadsheet in which every column of data is separated by a comma. If you open a `csv` file within Excel, however, it will look "normal". The advantage of using `csv` files is that it (should) make it easier to read data into QGIS and R as less things can go wrong.
+:::
+
+#### London population in 2011
+Open the `LSOA2011_population.xlsx` file in Excel. We have two main columns: one with identifying information that distinguishes each area from one another and one with population counts. In addition, there are some less informative rows at the top of the spreadsheet. 
+
+Looking at this we need to take two steps. First, we need to remove the top rows that we do not need. Second, we need to split the information in the first column into two columns. Currently, this columns contains unique area codes as well as unique area names. However, to be able to effectively link our population data to our spatial data, the codes are much more reliable and much less likely to cause issues than the area names. 
+
+1. Open a new Excel spreadsheet. From the `LSOA2011_population.xlsx` spreadsheet, copy over all cells from columns **A** to **B** and rows **9 to 4,651** into this new spreadsheet. Row 4,651 denotes the end of the *Greater London* areas which in some cases are kept at the top of the spreadsheet, depending on how the data are sorted.
+2. Rename the columns in the new spreadsheet to `lsoa` and `pop2011`, respectively. 
+3. Cut all the data from the `pop2011` column that is stored in column **B** and past these into column **C**. You now should have a column without any data between the `lsoa` and `pop2011` columns.
+4. Highlight the entire `lsoa` column and in the **Data** menu click on the **Text to Columns** menu button.
+
+```{r}
+#| label: fig-text-to-columns
+#| echo: False 
+#| cache: True
+#| fig-cap: "Highlight the `lsoa` columns and find the **Text to Columns** menu option."
+knitr::include_graphics('images/w02/text-to-columns.png')
+```
+
+::: { .callout-warning}
+Note that the **Text to Columns** function might be elsewhere in the menu depending on your version of Excel and/or your operating system.
+:::
+
+4. In the **Text to Columns** menu, select the **Delimited** radio button and click **Next**.
+5. Uncheck the checkbox for **Tab** and put `:` (colon) into the **Other** box. Click **Finish**. 
+6. Change the name of the `lsoa` column to `lsoa11_code` and change the name of the new column to `lsoa11_name`.
+
+```{r}
+#| label: fig-almost-there
+#| echo: False 
+#| cache: True
+#| fig-cap: "Your spreadsheet should now look something like this."
+knitr::include_graphics('images/w02/almost-there.png')
+```
+
+7. One thing that might cause problems when we try to link the population data to the spatial data is that there are still spaces contained in the `lsoa11_code` column. This is not directly noticeable until you select an individual cell, but they are definitely there. To solve this we can highlight the entire `lsoa11_code` column and in the **Home** menu opt for **Replace** under the **Find & Select** menu.
+
+```{r}
+#| label: fig-find-replace
+#| echo: False 
+#| cache: True
+#| fig-cap: "Accessing the **Replace** option."
+knitr::include_graphics('images/w02/find-replace.png')
+```
+
+8. In the **Find what** box put in a singular `space`, keep the **Replace with** box empty, and click on **Replace all**. You should get a message that 4,642 replacements have been made. 
+9. One further bit of formatting that you must do before saving your data is to format our population field. At the moment, you will see that there are commas separating the thousands within our values. If we leave these commas in our values, QGIS will read them as decimal points, creating decimal values of our population. There are many points at which we could resolve this issue, but the easiest point is now - we will strip our population values of the commas and set them to integer (whole numbers) values. To format the `pop2011` column, higlight the entire column and right-click on the `C` cell.  Click on **Format Cells** and set the Cells to **Number** with **0** decimal places. You should see that the commas are now removed from your population values.
+10. Save your spreadsheet as a `csv` file into your `data` folder as `LSOA2011_population.csv`.
+
+::: { .callout-tip}
+After saving the file, Excel might give you a warning along the lines of *Possible data loss*. You can safely ignore this message as the only 'information' you have lost is markup information or formulas native to Excel. In some cases you might also have options to choose in terms of what type of `csv` you would want to save the spreadsheet as. If so, opt for something along the lines of `CSV UTF-8 (Comma-delimited) (.csv)`.
+:::
+
+#### London population in 2021
+Now the 2011 data is prepared, we can move to the 2021 data:
+
+1. Open the `LSOA2021_population.xlsx` in Excel. You will notice that the file is formatted largely the same as the `LSOA2011_population.xlsx` file, although if you were to look closely you will notice that the London data are not at the top this time and that the number of top rows that we need to remove is not the same.
+2. Copy over all cells from columns **A** to **B** and rows **6 to 35,678** into a new spreadsheet. Now **sort** the data on your `lsoa` column (use: **Data** -> **Sort**) and subsequently remove all data below row **4,507**. This procedure *should* put the London LSOAs at the top again.
+3. Now carry out the same steps you used to clean the 2021 population file to clean the 2011 population file. Save the file as `csv` into your `data` folder as `LSOA2021_population.csv` with the following column names: `lsoa21_code`, `lsoa21_name`, and `pop2021`. 
+
+::: { .callout-warning}
+Whilst sorting our data based on the `lsoa` column is a  perfectly fine strategy this time around to effectively extract the London-based LSOAs, this does depend on the data and success is not guaranteed. Make sure to always double-check that you have all the data that you require and your approach worked.
 :::
