--- a/02-GIScience.qmd
+++ b/02-GIScience.qmd
@@ -98,7 +98,7 @@ For our practical, we will access data from two authoritative data portals:
 - For our population data, we will download **attribute** data directly from the *Office of National Statistics (ONS)*.
 
 ### Housekeeping {#w01-housekeeping}
-Before we download our data, it is important to establish an organised file systems that we will use throughout the modul. Create a `GEOG0030` folder in your `Documents` folder on your computer and within your `GEOG0030` folder, create the following subfolders: 
+Before we download our data, it is important to establish an organised file systems that we will use throughout the module. Create a `GEOG0030` folder in your `Documents` folder on your computer and within your `GEOG0030` folder, create the following subfolders: 
 
 | Folder name | Purpose      |
 | :----       | :----------- |
@@ -140,7 +140,7 @@ For our population data, we will use the 2011 and 2021 Census population counts 
 
 To get the 2011 Census population counts, you should:
 
-1. In the main menu go to **Census** -> **2011 Census** -> **Lower Layer Super Output Areas** -> **2021 Boundaries**.
+1. In the main menu of the *Nomis* portal go to **Census** -> **2011 Census** -> **Lower Layer Super Output Areas** -> **2021 Boundaries**.
 2. Click on **Topic Summaries**.
 3. Click on **TS007A - Age by five-year age bands**.
 4. Click on **Query data** on the left-hand side of the window.
@@ -148,7 +148,7 @@ To get the 2011 Census population counts, you should:
 6. Click on **Download data**. 
 7. Once the data is ready for download, download the file to your computer.
 
-In your `GEOG0030/data/raw/` folder, now create a new folder called `population` and copy the two spreadsheets to the newly created `population` folder. Rename the files you downloaded to: `LSOA2011_population.xlsx` and `LSOA2021_population.xlsx`, respectively.
+In your `GEOG0030/data/raw/` folder, now create a new folder called `population` and copy the two Excel files to the newly created `population` folder. Rename the files you downloaded to: `LSOA2011_population.xlsx` and `LSOA2021_population.xlsx`, respectively.
 
 ### Cleaning data {#w02-cleaning}
 When you open up any of the LSOA spreadsheets in Excel, you will notice that some additional rows of information are contained at the top of each of these files. This extra information will confuse QGIS and we therefore need to do a bit of data cleaning. To reduce the chance of errors in later stages, we will also save the data in `csv` format.
@@ -160,18 +160,18 @@ When you open up any of the LSOA spreadsheets in Excel, you will notice that som
 #### London population in 2011
 Open the `LSOA2011_population.xlsx` file in Excel. We have two main columns: one with identifying information that distinguishes each area from one another and one with population counts. In addition, there are some less informative rows at the top of the spreadsheet. 
 
-Looking at this we need to take two steps. First, we need to remove the top rows that we do not need. Second, we need to split the information in the first column into two columns. Currently, this columns contains unique area codes as well as unique area names. However, to be able to effectively link our population data to our spatial data, the codes are much more reliable and much less likely to cause issues than the area names. 
+Looking at this we need to take two steps. First, we need to remove the top rows that we do not need. Second, we need to spread the information in the first column into two columns. Currently, this columns contains unique area codes as well as unique area names. However, to be able to effectively link our population data to our spatial data, the codes are much more reliable and much less likely to cause issues than the area names. Putting area codes and area names into separate columns will help us sorting this out.
 
 1. Open a new Excel spreadsheet. From the `LSOA2011_population.xlsx` spreadsheet, copy over all cells from columns **A** to **B** and rows **9 to 4,651** into this new spreadsheet. Row 4,651 denotes the end of the *Greater London* areas which in some cases are kept at the top of the spreadsheet, depending on how the data are sorted.
 2. Rename the columns in the new spreadsheet to `lsoa` and `pop2011`, respectively. 
-3. Cut all the data from the `pop2011` column that is stored in column **B** and past these into column **C**. You now should have a column without any data between the `lsoa` and `pop2011` columns.
+3. Cut all the data from the `pop2011` column that is stored in column **B** and paste these into column **C**. You now should have a column *without* any data between the `lsoa` and `pop2011` columns.
 4. Highlight the entire `lsoa` column and in the **Data** menu click on the **Text to Columns** menu button.
 
 ```{r}
 #| label: fig-text-to-columns
 #| echo: False 
 #| cache: True
-#| fig-cap: "Highlight the `lsoa` columns and find the **Text to Columns** menu option."
+#| fig-cap: "Highlight the `lsoa` columns and find the **Text to Columns** menu option. Note that column **B** does not contain any data."
 knitr::include_graphics('images/w02/text-to-columns.png')
 ```
 
@@ -191,7 +191,7 @@ Note that the **Text to Columns** function might be elsewhere in the menu depend
 knitr::include_graphics('images/w02/almost-there.png')
 ```
 
-7. One thing that might cause problems when we try to link the population data to the spatial data is that there are still spaces contained in the `lsoa11_code` column. This is not directly noticeable until you select an individual cell, but they are definitely there. To solve this we can highlight the entire `lsoa11_code` column and in the **Home** menu opt for **Replace** under the **Find & Select** menu.
+7. One thing that might cause problems when we try to link the population data to the spatial data is that there are still spaces contained in the `lsoa11_code` column. This is not directly noticeable as these spaces are white space characters at the end of the LSOA codes without any other characters following it (i.e. [trailing spaces](https://stackoverflow.com/questions/22273233/what-is-meant-by-trailing-space-and-whats-the-difference-between-it-and-a-blank). This may seem trivial, but computer language is very precise so we need to remove these. We can do this by highlighting the entire `lsoa11_code` column and in the **Home** menu opting for **Replace** under the **Find & Select** menu.
 
 ```{r}
 #| label: fig-find-replace
@@ -201,7 +201,7 @@ knitr::include_graphics('images/w02/almost-there.png')
 knitr::include_graphics('images/w02/find-replace.png')
 ```
 
-8. In the **Find what** box put in a singular `space`, keep the **Replace with** box empty, and click on **Replace all**. You should get a message that 4,642 replacements have been made. 
+8. In the **Find what** box put in a singular `white space`, using the *spacebar* on your computer, keep the **Replace with** box empty, and click on **Replace all**. You should get a message that **4,642** replacements have been made. 
 9. One further bit of formatting that you must do before saving your data is to format our population field. At the moment, you will see that there are commas separating the thousands within our values. If we leave these commas in our values, QGIS will read them as decimal points, creating decimal values of our population. There are many points at which we could resolve this issue, but the easiest point is now - we will strip our population values of the commas and set them to integer (whole numbers) values. To format the `pop2011` column, higlight the entire column and right-click on the `C` cell.  Click on **Format Cells** and set the Cells to **Number** with **0** decimal places. You should see that the commas are now removed from your population values.
 10. Save your spreadsheet as a `csv` file into your `data` folder as `LSOA2011_population.csv`.
 
@@ -217,5 +217,5 @@ Now the 2011 data is prepared, we can move to the 2021 data:
 3. Now carry out the same steps you used to clean the 2021 population file to clean the 2011 population file. Save the file as `csv` into your `data` folder as `LSOA2021_population.csv` with the following column names: `lsoa21_code`, `lsoa21_name`, and `pop2021`. 
 
 ::: { .callout-warning}
-Whilst sorting our data based on the `lsoa` column is a  perfectly fine strategy this time around to effectively extract the London-based LSOAs, this does depend on the data and success is not guaranteed. Make sure to always double-check that you have all the data that you require and your approach worked.
+Whilst sorting our data based on the `lsoa` column is a  perfectly fine strategy this time around to effectively extract the London-based LSOAs, this does depend on the data and success is not guaranteed. Make sure to always double-check that you have all the data that you require and your approach actually worked before moving on.
 :::
