--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@ knitr::include_graphics('images/w00/geocomputation-welcome.png')
 ```
 
 ::: {.callout-warning}
-This page is currently unfinished and receicing updates for the 2023-2024 academic year. Refer to the [GEOG0030: Geocomputation 2022-2023](https://jtvandijk.github.io/GEOG0030_20222023/) workbook for the 2022-2023 content.
+This page is currently unfinished and receiving updates for the 2023-2024 academic year. Refer to the [GEOG0030: Geocomputation 2022-2023](https://jtvandijk.github.io/GEOG0030_20222023/) workbook for the 2022-2023 content.
 :::
 
 ## Welcome { .unnumbered}
